Add FAISS VectorDB

--- a/src/experiments/VectorDBs.ipynb
+++ b/src/experiments/VectorDBs.ipynb
@@ -20,7 +20,8 @@
    "source": [
     "from dotenv import load_dotenv\n",
     "from langchain.embeddings.openai import OpenAIEmbeddings\n",
-    "from langchain.vectorstores import Annoy\n",
+    "from langchain.vectorstores import Annoy, FAISS\n",
+    "from langchain.vectorstores.utils import DistanceStrategy\n",
     "from tqdm import tqdm\n",
     "\n",
     "import numpy as np\n",
@@ -94,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "0b64a1fb-9dea-4c28-a29d-1f9a091a9380",
    "metadata": {},
    "outputs": [],
@@ -123,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "14516761-4c09-4b8c-8441-7936bb73eef3",
    "metadata": {},
    "outputs": [],
@@ -146,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "c311a894-47c7-430c-a4db-3b78f6444653",
    "metadata": {},
    "outputs": [],
@@ -158,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "e5b21c64-c46d-4766-9faf-953fe1777435",
    "metadata": {},
    "outputs": [],
@@ -171,7 +172,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
+   "id": "eb202003-8a5a-4faf-80a2-1d0a8e706d4d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !mkdir ./backups/annoy/\n",
+    "annoy_vs.save_local(\"./backups/annoy/\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "4431e2df-820e-4115-a21c-8551f74d1af9",
    "metadata": {},
    "outputs": [
@@ -179,7 +191,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Computing similarity scores: 100%|██████████████████████| 1460/1460 [00:03<00:00, 455.59it/s]\n"
+      "Computing similarity scores: 100%|██████████████████████| 1460/1460 [00:03<00:00, 407.82it/s]\n"
      ]
     }
    ],
@@ -197,6 +209,17 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "8298522d-083b-4a68-b49c-3c5c7e1b1ddc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"./backups/annoy/annoy_similarity_scores.pkl\", \"wb\") as f:\n",
+    "    pickle.dump(annoy_similarity_scores, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "f805d9d2-4619-40eb-b899-779568a10627",
    "metadata": {},
    "outputs": [
@@ -226,51 +249,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "6b8e2997-e747-4228-a9fd-ab7ea8acb420",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "faiss_vs = FAISS.from_embeddings(\n",
+    "    text_embeddings=annoy_data, \n",
+    "    embedding=OpenAIEmbeddings(),\n",
+    "    distance_strategy=DistanceStrategy.DOT_PRODUCT)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
+   "id": "0ce10ea9-c0c1-4b70-b0fb-a96d9d9babd6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !mkdir ./backups/faiss/\n",
+    "faiss_vs.save_local(\"./backups/faiss/\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "8e21fe50-2ce9-44d4-9941-3fe133f04964",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Computing similarity scores: 100%|█████████████████████| 1460/1460 [00:00<00:00, 2395.95it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate cosine similarity for each query-document pair\n",
+    "faiss_similarity_scores = {}\n",
+    "for query in tqdm(loaded_queries, desc=\"Computing similarity scores\"):\n",
+    "    scores = faiss_vs.similarity_search_with_score_by_vector(query[\"embedding\"], k=100)\n",
+    "    new_scores = []\n",
+    "    for score in scores:\n",
+    "        new_scores.append((int(score[0].page_content), 1 - score[1]))\n",
+    "    faiss_similarity_scores[query[\"id\"]] = sorted(new_scores, key=lambda x: x[1], reverse=True)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b3203318-cb0b-469d-8e08-f9497a27e0c8",
+   "execution_count": 17,
+   "id": "f3899516-9049-45aa-9acf-8780db4e0deb",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "with open(\"./backups/faiss/faiss_similarity_scores.pkl\", \"wb\") as f:\n",
+    "    pickle.dump(faiss_similarity_scores, f)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "90d91409-bdd5-4b96-a2a2-7e765890df5e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5676c8e7-6a5d-4f3c-810d-b35ed31a0191",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "6fd75b39-fe79-488e-87d7-76398e2950c9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precision@10: 0.3, Recall@10: 1.0, NDCG@10: 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "p_at_k, r_at_k, n_at_k = get_metrics(\n",
+    "    similarity_scores_for_query_id=faiss_similarity_scores[1], \n",
+    "    relevant_docs_for_query=[1, 898, 361], \n",
+    "    k=10)\n",
+    "print(f\"Precision@10: {p_at_k}, Recall@10: {r_at_k}, NDCG@10: {n_at_k}\")"
+   ]
   },
   {
    "cell_type": "code",
