Updating directory structure

--- a/src/experiments/IR_with_OpenAI_Embeddings.ipynb
+++ b/src/experiments/IR_with_OpenAI_Embeddings.ipynb
@@ -339,8 +339,8 @@
     }
    ],
    "source": [
-    "docs_file_path = './backups/doc_embeddings.pkl'\n",
-    "query_file_path = './backups/query_embeddings.pkl'\n",
+    "docs_file_path = './backups/openai_embeddings/doc_embeddings.pkl'\n",
+    "query_file_path = './backups/openai_embeddings/query_embeddings.pkl'\n",
     "\n",
     "with open(docs_file_path, 'wb') as file:\n",
     "    pickle.dump(docs, file)\n",
@@ -371,14 +371,14 @@
    "source": [
     "#### In case of API limit exceeded error, use embeddings from pickle files ###\n",
     "\n",
-    "docs_file_path = './backups/doc_embeddings.pkl'\n",
+    "docs_file_path = './backups/openai_embeddings/doc_embeddings.pkl'\n",
     "\n",
     "with open(docs_file_path, 'rb') as file:\n",
     "    loaded_docs = pickle.load(file)\n",
     "\n",
     "print(\"Document embeddings loaded successfully.\")\n",
     "\n",
-    "query_file_path = './backups/query_embeddings.pkl'\n",
+    "query_file_path = './backups/openai_embeddings/query_embeddings.pkl'\n",
     "\n",
     "# Load the query embeddings from the file\n",
     "with open(query_file_path, 'rb') as file:\n",
