Add time metrics

--- a/src/experiments/VectorDBs.ipynb
+++ b/src/experiments/VectorDBs.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "id": "8d6acbf4-0449-433d-8f89-50bca0aeea51",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,8 @@
     "\n",
     "import numpy as np\n",
     "import os\n",
-    "import pickle"
+    "import pickle\n",
+    "import time"
    ]
   },
   {
@@ -56,14 +57,14 @@
     }
    ],
    "source": [
-    "docs_file_path = './backups/doc_embeddings.pkl'\n",
+    "docs_file_path = './backups/openai_embeddings/doc_embeddings.pkl'\n",
     "\n",
     "with open(docs_file_path, 'rb') as file:\n",
     "    loaded_docs = pickle.load(file)\n",
     "\n",
     "print(\"Document embeddings loaded successfully.\")\n",
     "\n",
-    "query_file_path = './backups/query_embeddings.pkl'\n",
+    "query_file_path = './backups/openai_embeddings/query_embeddings.pkl'\n",
     "\n",
     "# Load the query embeddings from the file\n",
     "with open(query_file_path, 'rb') as file:\n",
@@ -75,6 +76,28 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "3055306e-e726-4f40-96fb-c6a34bd9d0ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Grouth truth loaded succesfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load the ground truth from the file\n",
+    "with open(\"./backups/ground_truth.pkl\", \"rb\") as f:\n",
+    "    ground_truth = pickle.load(f)\n",
+    "\n",
+    "print(\"Grouth truth loaded succesfully.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "231ed619-147d-4023-985e-334285550a37",
    "metadata": {},
    "outputs": [],
@@ -95,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "0b64a1fb-9dea-4c28-a29d-1f9a091a9380",
    "metadata": {},
    "outputs": [],
@@ -124,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "14516761-4c09-4b8c-8441-7936bb73eef3",
    "metadata": {},
    "outputs": [],
@@ -147,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "c311a894-47c7-430c-a4db-3b78f6444653",
    "metadata": {},
    "outputs": [],
@@ -159,11 +182,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 34,
    "id": "e5b21c64-c46d-4766-9faf-953fe1777435",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 4 µs, sys: 1 µs, total: 5 µs\n",
+      "Wall time: 13.1 µs\n"
+     ]
+    }
+   ],
    "source": [
+    "%time\n",
+    "\n",
     "annoy_vs = Annoy.from_embeddings(\n",
     "    text_embeddings=annoy_data, \n",
     "    embedding=OpenAIEmbeddings(), \n",
@@ -172,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "eb202003-8a5a-4faf-80a2-1d0a8e706d4d",
    "metadata": {},
    "outputs": [],
@@ -183,7 +217,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
+   "id": "e8f86826-e888-4c93-bca3-5eb7ccf0ec6e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load index from file\n",
+    "loaded_annoy_vs = Annoy.load_local(\n",
+    "    folder_path=\"./backups/annoy/\", \n",
+    "    embeddings=OpenAIEmbeddings())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "id": "4431e2df-820e-4115-a21c-8551f74d1af9",
    "metadata": {},
    "outputs": [
@@ -191,24 +238,47 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Computing similarity scores: 100%|██████████████████████| 1460/1460 [00:03<00:00, 415.04it/s]\n"
+      "Computing similarity scores: 100%|████████████████████████| 112/112 [00:00<00:00, 382.35it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean execution time for all queries: 2.56 ms\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
    "source": [
     "# Calculate cosine similarity for each query-document pair\n",
     "annoy_similarity_scores = {}\n",
-    "for query in tqdm(loaded_queries, desc=\"Computing similarity scores\"):\n",
-    "    scores = annoy_vs.similarity_search_with_score_by_vector(query[\"embedding\"], k=100)\n",
+    "execution_times = [] \n",
+    "for query_id, query in tqdm(loaded_queries.items(), desc=\"Computing similarity scores\"):\n",
+    "    start_time = time.time()\n",
+    "    scores = loaded_annoy_vs.similarity_search_with_score_by_vector(query[\"embedding\"], k=100)\n",
+    "    end_time = time.time()  # Record end time\n",
+    "    execution_time = (end_time - start_time) * 1000  # Convert to milliseconds\n",
+    "    execution_times.append(execution_time)\n",
+    "\n",
     "    new_scores = []\n",
     "    for score in scores:\n",
     "        new_scores.append((int(score[0].page_content), score[1]))\n",
-    "    annoy_similarity_scores[query[\"id\"]] = sorted(new_scores, key=lambda x: x[1], reverse=True)"
+    "    annoy_similarity_scores[query_id] = sorted(new_scores, key=lambda x: x[1], reverse=True)\n",
+    "\n",
+    "mean_execution_time = sum(execution_times) / len(execution_times)\n",
+    "print(f\"Mean execution time for all queries: {mean_execution_time:.2f} ms\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "id": "8298522d-083b-4a68-b49c-3c5c7e1b1ddc",
    "metadata": {},
    "outputs": [],
@@ -219,18 +289,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "f805d9d2-4619-40eb-b899-779568a10627",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Precision@10: 0.3, Recall@10: 1.0, NDCG@10: 1.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "p_at_k, r_at_k, n_at_k = get_metrics(\n",
     "    similarity_scores_for_query_id=annoy_similarity_scores[1], \n",
@@ -249,11 +311,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 35,
    "id": "6b8e2997-e747-4228-a9fd-ab7ea8acb420",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 5 µs, sys: 1e+03 ns, total: 6 µs\n",
+      "Wall time: 14.1 µs\n"
+     ]
+    }
+   ],
    "source": [
+    "%time\n",
+    "\n",
     "faiss_vs = FAISS.from_embeddings(\n",
     "    text_embeddings=annoy_data, \n",
     "    embedding=OpenAIEmbeddings(),\n",
@@ -262,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "id": "0ce10ea9-c0c1-4b70-b0fb-a96d9d9babd6",
    "metadata": {},
    "outputs": [],
@@ -273,7 +346,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
+   "id": "a5911215-27b8-4955-bf40-6bbbe7bae4e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load index from file\n",
+    "loaded_faiss_vs = FAISS.load_local(\n",
+    "    folder_path=\"./backups/faiss/\",\n",
+    "    embeddings=OpenAIEmbeddings())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "id": "8e21fe50-2ce9-44d4-9941-3fe133f04964",
    "metadata": {},
    "outputs": [
@@ -281,24 +367,47 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Computing similarity scores: 100%|█████████████████████| 1460/1460 [00:00<00:00, 2335.64it/s]\n"
+      "Computing similarity scores: 100%|███████████████████████| 112/112 [00:00<00:00, 1587.67it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean execution time for all queries: 0.46 ms\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
    "source": [
     "# Calculate cosine similarity for each query-document pair\n",
     "faiss_similarity_scores = {}\n",
-    "for query in tqdm(loaded_queries, desc=\"Computing similarity scores\"):\n",
-    "    scores = faiss_vs.similarity_search_with_score_by_vector(query[\"embedding\"], k=100)\n",
+    "execution_times = [] \n",
+    "for query_id, query in tqdm(loaded_queries.items(), desc=\"Computing similarity scores\"):\n",
+    "    start_time = time.time()\n",
+    "    scores = loaded_faiss_vs.similarity_search_with_score_by_vector(query[\"embedding\"], k=100)\n",
+    "    end_time = time.time()  # Record end time\n",
+    "    execution_time = (end_time - start_time) * 1000  # Convert to milliseconds\n",
+    "    execution_times.append(execution_time)\n",
+    "\n",
     "    new_scores = []\n",
     "    for score in scores:\n",
     "        new_scores.append((int(score[0].page_content), 1 - score[1]))\n",
-    "    faiss_similarity_scores[query[\"id\"]] = sorted(new_scores, key=lambda x: x[1], reverse=True)"
+    "    faiss_similarity_scores[query_id] = sorted(new_scores, key=lambda x: x[1], reverse=True)\n",
+    "\n",
+    "mean_execution_time = sum(execution_times) / len(execution_times)\n",
+    "print(f\"Mean execution time for all queries: {mean_execution_time:.2f} ms\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 31,
    "id": "f3899516-9049-45aa-9acf-8780db4e0deb",
    "metadata": {},
    "outputs": [],
@@ -309,18 +418,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "6fd75b39-fe79-488e-87d7-76398e2950c9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Precision@10: 0.3, Recall@10: 1.0, NDCG@10: 1.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "p_at_k, r_at_k, n_at_k = get_metrics(\n",
     "    similarity_scores_for_query_id=faiss_similarity_scores[1], \n",
