--- a/src/experiments/IR_with_OpenAI_Embeddings.ipynb
+++ b/src/experiments/IR_with_OpenAI_Embeddings.ipynb
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "id": "2f75c3d8-619c-420b-ad45-f24a1d1fecc8",
    "metadata": {},
    "outputs": [],
@@ -477,6 +477,31 @@
     "        clean_line = line.strip().replace('\\t',' ').split()\n",
     "        query, doc = [int(num.replace(' ','')) for num in clean_line[:2]]\n",
     "        ground_truth[query].append(doc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "14601412-313f-49f8-9c62-3f9d6678c661",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"./backups/ground_truth.pkl\", \"wb\") as f:\n",
+    "    pickle.dump(ground_truth, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "84aa174d-4ea7-46f1-bfbe-e2fe85b326d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load the ground truth from the file\n",
+    "with open(\"./backups/ground_truth.pkl\", \"rb\") as f:\n",
+    "    ground_truth = pickle.load(f)\n",
+    "\n",
+    "print(\"Grouth truth loaded succesfully.\")"
    ]
   },
   {
@@ -579,7 +604,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
