Add metrics wrt ground truth

--- a/src/experiments/IR_with_OpenAI_Embeddings.ipynb
+++ b/src/experiments/IR_with_OpenAI_Embeddings.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "1c9eb3eb-61a9-4c9c-b1e7-702f33569ef6",
    "metadata": {},
    "outputs": [],
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "2f75c3d8-619c-420b-ad45-f24a1d1fecc8",
    "metadata": {},
    "outputs": [],
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "14601412-313f-49f8-9c62-3f9d6678c661",
    "metadata": {},
    "outputs": [],
@@ -555,7 +555,8 @@
    "source": [
     "mean_precision_at_k = np.mean([precision_at_k(preds,label) for preds,label in zip(predictions[1:],ground_truth)])\n",
     "mean_recall_at_k = np.mean([recall_at_k(preds,label) for preds,label in zip(predictions[1:],ground_truth)])\n",
-    "mean_ndcg_at_k = np.mean([ndcg_at_k(preds,label) for preds,label in zip(predictions[1:],ground_truth)])"
+    "mean_ndcg_at_k = np.mean([ndcg_at_k(preds,label) for preds,label in zip(predictions[1:],ground_truth)])\n",
+    "mean_sps = np.mean([precision_at_k(preds,label,1) for preds,label in zip(predictions[1:],ground_truth)])"
    ]
   },
   {
@@ -576,7 +577,7 @@
     }
    ],
    "source": [
-    "mean_precision_at_k, mean_recall_at_k, mean_ndcg_at_k"
+    "mean_precision_at_k, mean_recall_at_k, mean_ndcg_at_k, mean_sps"
    ]
   },
   {
