--- a/src/experiments/VectorDBs.ipynb
+++ b/src/experiments/VectorDBs.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "id": "8d6acbf4-0449-433d-8f89-50bca0aeea51",
    "metadata": {},
    "outputs": [],
@@ -125,39 +125,24 @@
    "source": [
     "def precision_at_k(ranked_docs, relevant_docs, k=10):\n",
     "    retrieved_relevant = 0\n",
-    "    for doc_id, _ in ranked_docs[:k]:\n",
+    "    for doc_id in ranked_docs[:k]:\n",
     "        if doc_id in relevant_docs:\n",
     "            retrieved_relevant += 1\n",
     "    return retrieved_relevant / k\n",
     "\n",
     "def recall_at_k(ranked_docs, relevant_docs, k=10):\n",
-    "    retrieved_relevant = sum(1 for doc_id, _ in ranked_docs[:k] if doc_id in relevant_docs)\n",
+    "    retrieved_relevant = sum(1 for doc_id in ranked_docs[:k] if doc_id in relevant_docs)\n",
     "    return retrieved_relevant / len(relevant_docs) if relevant_docs else 0\n",
-    "    \n",
+    "\n",
     "def dcg_at_k(scores, k=10):\n",
     "    return sum(score / np.log2(idx + 2) for idx, score in enumerate(scores[:k]))\n",
     "\n",
     "def ndcg_at_k(ranked_docs, relevant_docs, k=5):\n",
-    "    ideal_scores = [1 if doc_id in relevant_docs else 0 for doc_id, _ in ranked_docs]\n",
-    "    actual_scores = [1 if doc_id in relevant_docs else 0 for doc_id, _ in ranked_docs[:k]]\n",
+    "    ideal_scores = [1 if doc_id in relevant_docs else 0 for doc_id in ranked_docs]\n",
+    "    actual_scores = [1 if doc_id in relevant_docs else 0 for doc_id in ranked_docs[:k]]\n",
     "    idcg = dcg_at_k(ideal_scores, k)\n",
     "    dcg = dcg_at_k(actual_scores, k)\n",
     "    return dcg / idcg if idcg > 0 else 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "14516761-4c09-4b8c-8441-7936bb73eef3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_metrics(similarity_scores_for_query_id, relevant_docs_for_query, k=10):\n",
-    "    precision = precision_at_k(similarity_scores_for_query_id, relevant_docs_for_query, k)\n",
-    "    recall = recall_at_k(similarity_scores_for_query_id, relevant_docs_for_query, k)\n",
-    "    ndcg = ndcg_at_k(similarity_scores_for_query_id, relevant_docs_for_query, k)\n",
-    "\n",
-    "    return precision, recall, ndcg"
    ]
   },
   {
@@ -170,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "c311a894-47c7-430c-a4db-3b78f6444653",
    "metadata": {},
    "outputs": [],
@@ -182,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "id": "e5b21c64-c46d-4766-9faf-953fe1777435",
    "metadata": {},
    "outputs": [
@@ -190,8 +175,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 4 µs, sys: 1 µs, total: 5 µs\n",
-      "Wall time: 13.1 µs\n"
+      "CPU times: user 1 µs, sys: 1 µs, total: 2 µs\n",
+      "Wall time: 2.15 µs\n"
      ]
     }
    ],
@@ -206,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "eb202003-8a5a-4faf-80a2-1d0a8e706d4d",
    "metadata": {},
    "outputs": [],
@@ -217,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "e8f86826-e888-4c93-bca3-5eb7ccf0ec6e",
    "metadata": {},
    "outputs": [],
@@ -230,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "id": "4431e2df-820e-4115-a21c-8551f74d1af9",
    "metadata": {},
    "outputs": [
@@ -238,14 +223,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Computing similarity scores: 100%|████████████████████████| 112/112 [00:00<00:00, 382.35it/s]"
+      "Computing similarity scores: 100%|████████████████████████| 112/112 [00:00<00:00, 410.71it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean execution time for all queries: 2.56 ms\n"
+      "Mean execution time for all queries: 2.39 ms\n"
      ]
     },
     {
@@ -278,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "id": "8298522d-083b-4a68-b49c-3c5c7e1b1ddc",
    "metadata": {},
    "outputs": [],
@@ -289,16 +274,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f805d9d2-4619-40eb-b899-779568a10627",
+   "execution_count": 14,
+   "id": "0e07dba8-12d0-4bc2-a6f4-6a7030da638a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "p_at_k, r_at_k, n_at_k = get_metrics(\n",
-    "    similarity_scores_for_query_id=annoy_similarity_scores[1], \n",
-    "    relevant_docs_for_query=[1, 898, 361], \n",
-    "    k=10)\n",
-    "print(f\"Precision@10: {p_at_k}, Recall@10: {r_at_k}, NDCG@10: {n_at_k}\")"
+    "annoy_predictions = [0]*(len(annoy_similarity_scores)+1)\n",
+    "for idx, scores in annoy_similarity_scores.items():\n",
+    "    scores_flattened = [doc for doc, score in scores]\n",
+    "    annoy_predictions[idx] = scores_flattened"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "4fedc67e-1369-4022-aa24-f9f252105c41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "annoy_mean_precision_at_k = np.mean(\n",
+    "    [precision_at_k(preds, label) for preds, label in zip(annoy_predictions[1:], ground_truth)])\n",
+    "annoy_mean_recall_at_k = np.mean(\n",
+    "    [recall_at_k(preds, label) for preds, label in zip(annoy_predictions[1:], ground_truth)])\n",
+    "annoy_mean_ndcg_at_k = np.mean(\n",
+    "    [ndcg_at_k(preds, label) for preds, label in zip(annoy_predictions[1:], ground_truth)])\n",
+    "annoy_mean_sps = np.mean(\n",
+    "    [precision_at_k(preds, label, 1) for preds, label in zip(annoy_predictions[1:], ground_truth)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "9e3ba33b-4464-4c90-a168-18240f92e9ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.9705357142857144, 0.003116685016974034, 1.0, 0.9821428571428571)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "annoy_mean_precision_at_k, annoy_mean_recall_at_k, annoy_mean_ndcg_at_k, annoy_mean_sps"
    ]
   },
   {
@@ -311,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 17,
    "id": "6b8e2997-e747-4228-a9fd-ab7ea8acb420",
    "metadata": {},
    "outputs": [
@@ -319,8 +341,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 5 µs, sys: 1e+03 ns, total: 6 µs\n",
-      "Wall time: 14.1 µs\n"
+      "CPU times: user 1e+03 ns, sys: 0 ns, total: 1e+03 ns\n",
+      "Wall time: 2.15 µs\n"
      ]
     }
    ],
@@ -335,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "id": "0ce10ea9-c0c1-4b70-b0fb-a96d9d9babd6",
    "metadata": {},
    "outputs": [],
@@ -346,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
    "id": "a5911215-27b8-4955-bf40-6bbbe7bae4e9",
    "metadata": {},
    "outputs": [],
@@ -359,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 20,
    "id": "8e21fe50-2ce9-44d4-9941-3fe133f04964",
    "metadata": {},
    "outputs": [
@@ -367,14 +389,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Computing similarity scores: 100%|███████████████████████| 112/112 [00:00<00:00, 1587.67it/s]"
+      "Computing similarity scores: 100%|███████████████████████| 112/112 [00:00<00:00, 1248.71it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean execution time for all queries: 0.46 ms\n"
+      "Mean execution time for all queries: 0.68 ms\n"
      ]
     },
     {
@@ -407,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 21,
    "id": "f3899516-9049-45aa-9acf-8780db4e0deb",
    "metadata": {},
    "outputs": [],
@@ -418,22 +440,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6fd75b39-fe79-488e-87d7-76398e2950c9",
+   "execution_count": 22,
+   "id": "40ae6768-bf3b-45ef-9d18-48000dc48542",
    "metadata": {},
    "outputs": [],
    "source": [
-    "p_at_k, r_at_k, n_at_k = get_metrics(\n",
-    "    similarity_scores_for_query_id=faiss_similarity_scores[1], \n",
-    "    relevant_docs_for_query=[1, 898, 361], \n",
-    "    k=10)\n",
-    "print(f\"Precision@10: {p_at_k}, Recall@10: {r_at_k}, NDCG@10: {n_at_k}\")"
+    "faiss_predictions = [0]*(len(faiss_similarity_scores)+1)\n",
+    "for idx, scores in annoy_similarity_scores.items():\n",
+    "    scores_flattened = [doc for doc, score in scores]\n",
+    "    faiss_predictions[idx] = scores_flattened"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "d4f586ee-a4dc-4614-a102-ab1fb2ad2f0c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "faiss_mean_precision_at_k = np.mean(\n",
+    "    [precision_at_k(preds, label) for preds, label in zip(faiss_predictions[1:], ground_truth)])\n",
+    "faiss_mean_recall_at_k = np.mean(\n",
+    "    [recall_at_k(preds, label) for preds, label in zip(faiss_predictions[1:], ground_truth)])\n",
+    "faiss_mean_ndcg_at_k = np.mean(\n",
+    "    [ndcg_at_k(preds, label) for preds, label in zip(faiss_predictions[1:], ground_truth)])\n",
+    "faiss_mean_sps = np.mean(\n",
+    "    [precision_at_k(preds, label, 1) for preds, label in zip(faiss_predictions[1:], ground_truth)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "c158afba-1596-4dd3-94b8-65298303e8d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.9705357142857144, 0.003116685016974034, 1.0, 0.9821428571428571)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "faiss_mean_precision_at_k, faiss_mean_recall_at_k, faiss_mean_ndcg_at_k, faiss_mean_sps"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca42d444-9b57-4100-b9d5-3825d5b2dbc3",
+   "id": "5a242a69-31db-472b-915e-010b276b3b7f",
    "metadata": {},
    "outputs": [],
    "source": []
