--- a/src/experiments/IR_with_OpenAI_Embeddings.ipynb
+++ b/src/experiments/IR_with_OpenAI_Embeddings.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "1c9eb3eb-61a9-4c9c-b1e7-702f33569ef6",
    "metadata": {},
    "outputs": [],
@@ -172,27 +172,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "72cfed7e-f8fc-416c-9607-944df38523f0",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(1, 1), (1, 92), (1, 262), (1, 556), (1, 1004)]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "edges[:5]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
    "id": "922b6a29-005a-4449-9f44-db6f51b73bfb",
    "metadata": {},
    "outputs": [],
@@ -203,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "9712d43c-98f2-45e4-b82e-816e8e2a4ad8",
    "metadata": {},
    "outputs": [],
@@ -227,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "bc111f3e-0515-4d81-92ef-224dc58dfb3f",
    "metadata": {},
    "outputs": [
@@ -237,7 +216,7 @@
        "112"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,11 +227,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "0dc04a55-82ef-45a0-ae1e-af1c71b79e8c",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#### API CALL WARNING ####\n",
+    "\n",
     "client = OpenAI(api_key = OPENAI_API_KEY)\n",
     "\n",
     "def get_embedding(text, model=\"text-embedding-ada-002\"):\n",
@@ -268,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "ca336b18-cad5-43c4-b02d-56257801f95d",
    "metadata": {},
    "outputs": [
@@ -276,11 +257,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Generating Embeddings...: 100%|█████████████| 1460/1460 [04:11<00:00,  5.82it/s]\n"
+      "Generating Embeddings: 100%|███████████████████████████████████████| 1460/1460 [04:46<00:00,  5.10it/s]\n"
      ]
     }
    ],
    "source": [
+    "#### API CALL WARNING ####\n",
+    "\n",
+    "\n",
     "# Generate embeddings for docs\n",
     "for doc in tqdm(docs, desc = 'Generating Embeddings'):\n",
     "    combined_text = doc['title'] + \" \" + doc['body']\n",
@@ -297,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "id": "4a1f98a4-0aff-4f5b-8517-bd64ab9c477f",
    "metadata": {},
    "outputs": [
@@ -305,11 +289,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Generating Embeddings: 100%|█████████████████████████████████████████| 112/112 [00:43<00:00,  2.58it/s]\n"
+      "Generating Embeddings: 100%|█████████████████████████████████████████| 112/112 [00:20<00:00,  5.53it/s]\n"
      ]
     }
    ],
    "source": [
+    "#### API CALL WARNING ####\n",
+    "\n",
     "# Generate embeddings for queries\n",
     "for idx, query in tqdm(queries.items(), desc = 'Generating Embeddings'):\n",
     "    query_text = \" \".join(query)\n",
@@ -326,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "id": "c2867e1a-8949-439e-9807-75369a5760cd",
    "metadata": {},
    "outputs": [
@@ -334,11 +320,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Embeddings saved to ./backups/query_embeddings.pkl\n"
+      "Embeddings saved to ./backups/openai_embeddings/doc_embeddings.pkl\n",
+      "Embeddings saved to ./backups/openai_embeddings/query_embeddings.pkl\n"
      ]
     }
    ],
    "source": [
+    "#### DUMP OVERWRITE WARNING ####\n",
+    "\n",
     "docs_file_path = './backups/openai_embeddings/doc_embeddings.pkl'\n",
     "query_file_path = './backups/openai_embeddings/query_embeddings.pkl'\n",
     "\n",
@@ -399,14 +388,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Computing similarity scores: 100%|███████████████████████████████████| 112/112 [00:29<00:00,  3.81it/s]"
+      "Computing similarity scores: 100%|███████████████████████████████████| 112/112 [00:40<00:00,  2.76it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean execution time for all queries: 261.24 ms\n"
+      "Mean execution time for all queries: 361.41 ms\n"
      ]
     },
     {
@@ -465,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "id": "2f75c3d8-619c-420b-ad45-f24a1d1fecc8",
    "metadata": {},
    "outputs": [],
@@ -481,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "id": "14601412-313f-49f8-9c62-3f9d6678c661",
    "metadata": {},
    "outputs": [],
@@ -492,21 +481,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "84aa174d-4ea7-46f1-bfbe-e2fe85b326d8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ground truth loaded succesfully.\n"
+     ]
+    }
+   ],
    "source": [
     "# Load the ground truth from the file\n",
     "with open(\"./backups/ground_truth.pkl\", \"rb\") as f:\n",
     "    ground_truth = pickle.load(f)\n",
     "\n",
-    "print(\"Grouth truth loaded succesfully.\")"
+    "print(\"Ground truth loaded succesfully.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "b9bfe527-76f1-4aaa-abe8-b5e0b240f681",
    "metadata": {},
    "outputs": [],
@@ -535,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "7eccde7a-62b9-43eb-b0f1-b877b8da0e7b",
    "metadata": {},
    "outputs": [],
@@ -548,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "c1fc5493-8dfd-4ae4-bd6b-bd29b629fdd0",
    "metadata": {},
    "outputs": [],
@@ -561,17 +558,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "4010549d-7c63-4df8-814f-6059a4997a74",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.9705357142857144, 0.003116685016974034, 1.0)"
+       "(0.9705357142857144, 0.003116685016974034, 1.0, 0.9821428571428571)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -605,7 +602,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
